Implementacion de login, #39
Implementacion de la funcionalidad de inicio de sesion de tal forma que se
realice mediante el email en lugar del nombre de usuario

--- a/src/main/webapp/views/security/messages.properties
+++ b/src/main/webapp/views/security/messages.properties
@@ -8,9 +8,9 @@
 
 security.login.title	= Login form
 
-security.username		= User name:
+security.username		= Email:
 security.password		= Password:
 
 security.login			= Login
 
-security.login.failed	= Your user name or password is wrong! 
+security.login.failed	= Your email or password is wrong! 
