--- a/src/main/webapp/views/security/messages_es.properties
+++ b/src/main/webapp/views/security/messages_es.properties
@@ -8,9 +8,9 @@
 
 security.login.title	= Autentificación
 
-security.username		= Usuario:
+security.username		= Email:
 security.password		= Contraseña:
 
 security.login			= Login
 
-security.login.failed	= ¡Su usuario o contraseña son incorrectos! 
+security.login.failed	= ¡Su email o contraseña son incorrectos! 
