--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -10,9 +10,11 @@ master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
 
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
+master.page.driver				= Driver
+master.page.customer.route.list		= List Routes
 master.page.customer.action.2		= Action 2
+
+master.page.customer 			= Customer
 
 master.page.profile 				= Profile
 master.page.profile.action.1 		= Action 1
