--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -10,9 +10,11 @@ master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
 
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
+master.page.driver				= Conductor
+master.page.customer.route.list		= Listar Rutas
 master.page.customer.action.2		= Acción 2
+
+master.page.customer = Cliente
 
 master.page.profile 				= Perfil
 master.page.profile.action.1 		= Acción 1
