--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -14,10 +14,10 @@ route.origin				= Origen
 route.destination			= Destino
 route.stimatedDuration		= Duracion Estimada
 route.daysRepeat			= Dias Repetidos
-route.avaliableSeats		= Asientos disponibles
+route.availableSeats		= Asientos disponibles
 route.details				= Detalles
 route.isCancelled			= Abortar Ruta
-route.maxLugagge			= Tamaño Equipage Permitido
+route.maxLuggage			= Tamaño Equipage Permitido
 route.save					= Guardar
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
