--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -23,3 +23,5 @@ route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 driver.commit.error			= Error al guardar en la transaccion
 route.vehicle				= Vehiculos
+origin.time=Hora de salida
+destination.time=Hora de llegada
