Cookies and Terms of services #64 Aviso de cookies, página de terminos y condiciones y cambio de tipografia.

--- a/src/main/webapp/views/welcome/messages_es.properties
+++ b/src/main/webapp/views/welcome/messages_es.properties
@@ -1,12 +1,25 @@
-# messages_es.properties
+# messages.properties
 #
-# Copyright (C) 2019 Universidad de Sevilla
+# Copyright (C) 2017 Universidad de Sevilla
 # 
 # The use of this project is hereby constrained to the conditions of the 
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-welcome.greeting.prefix 		= ¡Saludos 
+welcome.greeting.prefix 		= Greetings
 welcome.greeting.suffix			= !
 
-welcome.greeting.current.time	= Día y hora actuales: 
+welcome.greeting.current.time	= Current time is 
+
+
+
+ 
+welcome.terms.and.conditions	=	Terms and Conditions
+welcome.accept.terms.and.conditions	=	By clicking on the 'Login' button you accept the Terms and Conditions
+
+terms.and.conditions.1 = It's a necessary requirement for using the services offered by this site to read and accept the Terms and Conditions writen up next. All services offered by our site might be created, charged, sent or presented by a third web page and in that case they would be subject to its own Terms and Conditions. To use our services, it is necessary for the user to log in, entering personal data and defining a password.
+terms.and.conditions.2 = You can modify or delete information recorded about yourself by going to your profile (localized on the top of tha page) and clicking on the 'Edit Profile' button.
+terms.and.conditions.3 = The user must respect at any time the Terms and Conditions established in the next general conditions of use for this site. Expressly the user states that he/she will use the site diligently and assuming any responsibility derived from the breach of the rules. In addition, the user won't be able to use this site to transmit, store, divulge, promote or distribute data or content that carries virus or any other kind of code, file or software designed to interrupt, destroy or harm the functioning any program or equipment.
+terms.and.conditions.4 = Except the cases where the Law expressly imposes the opposite, and exclusively with the measure and extension in which it is imposed, Acme Bands doesn't guarantees or assumes any responsibility about the posible damages caused by the use of the information, data and services of the site. The administrator of the system will be able to ban users and bands if he/she finds them inappropiate. A user or band will be considered inappropiate if they disrespect and/or offend any minority, ethnic group or opressed group. The same is applied when an administrator decides to delete a review that he/she doesn't find it appropiate. 
+terms.and.conditions.5 = These conditions are ruled and interpreted according to the Spanish Law. For any claim, the courts and tribunals of Seville will be competent. All notifications, requirements, requests and other communications that the user wishes to make to Trond must be made in writing and it will be understood that they have been correctly made when they have been received at the following address: 'contact@trond.com'.
+ 
