--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -6,22 +6,24 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-route.create				= Crear Ruta
-route.distance				= Distancia
-route.price					= Precio
-route.departureDate			= Fecha de salida
-route.origin				= Origen	
-route.destination			= Destino
-route.stimatedDuration		= Duracion Estimada
-route.daysRepeat			= Dias Repetidos
-route.availableSeats		= Asientos disponibles
-route.details				= Detalles
-route.isCancelled			= Abortar Ruta
-route.maxLuggage			= Tamaño Equipage Permitido
-route.save					= Guardar
-route.abort					= Abortar Viaje
-route.cancel				= Cancelar
-driver.commit.error			= Error al guardar en la transaccion
-route.vehicle				= Vehiculos
-origin.time=Hora de salida
-destination.time=Hora de llegada
+route.create				= Create route
+route.distance				= Distance
+route.price					= Price
+route.departureDate			= Departure date
+route.origin				= Origin	
+route.destination			= Destination
+route.stimatedDuration		= Stimated duration
+route.daysRepeat			= Repeated days
+route.availableSeats		= Available seats
+route.details				= Details
+route.isCancelled			= Abort Route
+route.maxLuggage			= Allowed luggage size
+route.save					= Save
+route.abort					= Abort trip
+route.cancel				= Cancel
+route.confirm				= Confirm
+route.commit.error			= Cannot commit operation
+driver.commit.error			= Error while saving the transaction
+route.vehicle				= Vehicles
+origin.time					= Departure time
+destination.time			= Arrival time
