Avances en Route Profile, #65

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -57,5 +57,8 @@ route.reserv.rejected		= Your reservation has been rejected by the driver
 route.reserv.accepted		= Your reservation has been accepted by the driver
 route.reserv.cancelled		= You have cancelled your reservation
 
+route.reserv.cancel			= Cancel Reservation
+route.driver.pick.up		= The driver picked me up
+route.driver.no.pick.up		= The driver didn't pick me up
 
 route.date.format		= {0,date,yyyy/MM/dd HH:mm}
