--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -57,4 +57,8 @@ route.reserv.rejected		= Tu reserva ha sido denegada por el conductor
 route.reserv.accepted		= Tu reserva ha sido aceptada por el conductor
 route.reserv.cancelled		= Has cancelado tu reserva
 
+route.reserv.cancel			= Cancelar Reserva
+route.driver.pick.up		= El conductor me ha recogido
+route.driver.no.pick.up		= El conductor no me ha recogido
+
 route.date.format		= {0,date,dd/MM/yyyy HH:mm}
