Terminados botones de RouteReport, #57
Funciona la funcionalidad de confirmar si un conductor ha recogido al
pasajero o no.

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -20,6 +20,7 @@ route.details				= Details
 route.isCancelled			= Aborted Route
 route.maxLuggage			= Allowed Luggage Size
 route.save					= Save
+route.confirm				= Confirmation Message
 route.abort					= Abort Route
 route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
