--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -20,6 +20,7 @@ route.details				= Detalles
 route.isCancelled			= Abortar Ruta
 route.maxLuggage			= Tamaño Equipage Permitido
 route.save					= Guardar
+route.confirm				= Mensaje de confirmacion
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 route.confirm				= Confirmar
