Commit arreglando un fallo en el idioma de la vista de Search

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -25,5 +25,10 @@ route.confirm				= Confirm
 route.commit.error			= Cannot commit operation
 driver.commit.error			= Error while saving the transaction
 route.vehicle				= Vehicles
-origin.time					= Departure time
-destination.time			= Arrival time
+origin.time					= Minimum Hour 
+destination.time			= Maximum Hour 
+route.vehicleType=VehicleType
+route.pets=Pets
+route.music=Music
+route.childs=Children
+route.smoke=Smoke
