--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -24,5 +24,10 @@ route.cancel				= Cancelar
 route.confirm				= Confirmar
 route.commit.error			= Error al guardar en la transaccion
 route.vehicle				= Vehiculos
-origin.time					=Hora de salida
-destination.time			=Hora de llegada
+origin.time					=Hora mínima de espera
+destination.time			=Hora máxima de espera
+route.vehicleType=Tipo de vehículo
+route.pets=Mascotas
+route.music=Música
+route.childs=Niños
+route.smoke=Tabaco
