--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -20,7 +20,7 @@ route.details				= Details
 route.isCancelled			= Aborted Route
 route.maxLuggage			= Allowed Luggage Size
 route.save					= Save
-route.confirm				= Confirmation Message
+route.confirm				= Confirm
 route.abort					= Abort Route
 route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
