--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -25,9 +25,11 @@ route.abort					= Abort Route
 route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
 route.vehicle				= Vehicles
-<<<<<<< HEAD
+route.vehicleType			= Vehicle type
+
 origin.time					= Departure Time
 destination.time			= Arrival Time
+route.formatDate			= dd/MM/yyyy HH:mm
 
 route.driver				= Driver
 route.passengers			= Passengers
@@ -39,6 +41,7 @@ route.children				= Children
 route.seats					= Seats
 route.price.per.passenger	= Price per Passenger
 route.luggage				= Luggage
+route.commit.error			= Cannot commit operation
 
 route.request.seats			= Request Seats
 route.total					= Total
