--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -25,10 +25,11 @@ route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 route.commit.error			= Error al guardar en la transaccion
 route.vehicle				= Vehiculos
-<<<<<<< HEAD
+route.vehicleType			= Tipo de vehículo
 
 origin.time					= Hora de salida
 destination.time			= Hora de llegada
+route.formatDate			= dd/MM/yyyy HH:mm
 
 route.driver				= Conductor
 route.passengers			= Pasajeros
