--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -19,6 +19,7 @@ route.details				= Detalles
 route.isCancelled			= Abortar Ruta
 route.maxLuggage			= Tamaño Equipage Permitido
 route.save					= Guardar
+route.confirm				= Confirmar
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 driver.commit.error			= Error al guardar en la transaccion
