Bug Fix precio de Reserva + Confirmacion, #66
Arreglado el bug por el cual no se actualizaba en tiempo real el precio de
la reserva a medida que se variaban los asientos. En su lugar se ha
retirado del formulario y el precio final aparece en una vista de
confirmacion.

--- a/src/main/webapp/views/reservation/messages.properties
+++ b/src/main/webapp/views/reservation/messages.properties
@@ -23,5 +23,7 @@ reservation.create				= 	Make a Reservation
 reservation.cancel				= 	Cancel
 reservation.cancelReservation	=	Cancel Reservation
 reservation.save				=	Save
+reservation.confirm				=	Confirm
+reservation.confirm.message		=	Do you want to confirm this reservation?
 
 reservation.commit.error		=	Cannot commit this operation
