--- a/src/main/webapp/views/reservation/messages_es.properties
+++ b/src/main/webapp/views/reservation/messages_es.properties
@@ -23,5 +23,7 @@ reservation.create				= 	Hacer una Reserva
 reservation.cancel				= 	Cancelar
 reservation.cancelReservation	=	Cancelar Reserva
 reservation.save				=	Guardar
+reservation.confirm				=	Confirmar
+reservation.confirm.message		=	¿Quiere confirmar esta reserva?
 
 reservation.commit.error		=	No se puede realizar esta operacion
