User Profile, User Management, y Register User
Implementados las tareas del titulo, estan relacionadas con
las issues #75, #68 y #72

--- a/src/main/webapp/views/security/messages.properties
+++ b/src/main/webapp/views/security/messages.properties
@@ -14,3 +14,5 @@ security.password		= Password:
 security.login			= Login
 
 security.login.failed	= Your email or password is wrong! 
+passenger.register.save		= Register as Passenger
+driver.register.save		= Register as Driver
