--- a/src/main/webapp/views/security/messages_es.properties
+++ b/src/main/webapp/views/security/messages_es.properties
@@ -14,3 +14,5 @@ security.password		= Contraseña:
 security.login			= Login
 
 security.login.failed	= ¡Su email o contraseña son incorrectos! 
+passenger.register.save		= Registrarse como Pasajero
+driver.register.save		= Registrarse como Conductor
