--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -21,6 +21,7 @@ route.isCancelled			= Aborted Route
 route.maxLuggage			= Allowed Luggage Size
 route.save					= Save
 route.confirm				= Confirm
+route.confirm.cancel		= Are you sure you want to cancel this route?
 route.abort					= Abort Route
 route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
