--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -21,6 +21,7 @@ route.isCancelled			= Abortar Ruta
 route.maxLuggage			= Tamaño Equipage Permitido
 route.save					= Guardar
 route.confirm				= Confirmar
+route.confirm.cancel		= ¿Seguro que quieres cancelar esta ruta?
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 route.commit.error			= Error al guardar en la transaccion
