--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -6,14 +6,18 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+stop						= Stop
 route.route					= Route
+route.stop					= Stop
+route.addStop				= Add Stop
+route.remove				= Remove
 route.create				= New Route
 route.distance				= Distance
 route.price					= Price
 route.departureDate			= Departure Date
 route.origin				= Origin
 route.destination			= Destination
-route.stimatedDuration		= Estimated Duration
+route.stimatedDuration		= Estimated Duration(min)
 route.daysRepeat			= Days to Repeat
 route.availableSeats		= Available Seats
 route.details				= Details
