--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -6,14 +6,18 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
 route.route					= Ruta
+route.stop					= Parada
+route.addStop				= Añadir Parada
+route.remove				= Eliminar
 route.create				= Crear Ruta
 route.distance				= Distancia
 route.price					= Precio
 route.departureDate			= Fecha de salida
 route.origin				= Origen	
 route.destination			= Destino
-route.stimatedDuration		= Duracion Estimada
+route.stimatedDuration		= Duracion Estimada (min)
 route.daysRepeat			= Dias Repetidos
 route.availableSeats		= Asientos disponibles
 route.details				= Detalles
