Complete rework of route publication form, #45
- Redone the visuals of the route publication form.

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+minutes						= Min.
 stop						= Stop
 route.route					= Route
 route.stop					= Stop
@@ -29,7 +30,7 @@ route.confirm.cancel		= Are you sure you want to cancel this route?
 route.abort					= Abort Route
 route.cancel				= Cancel
 driver.commit.error			= Error while saving during transaction
-route.vehicle				= Vehicles
+route.vehicle				= Vehicle
 route.vehicleType			= Vehicle type
 
 origin.time					= Departure Time
