--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-
+minutes						= Min.
 route.route					= Ruta
 route.stop					= Parada
 route.addStop				= Añadir Parada
@@ -29,7 +29,7 @@ route.confirm.cancel		= ¿Seguro que quieres cancelar esta ruta?
 route.abort					= Abortar Viaje
 route.cancel				= Cancelar
 route.commit.error			= Error al guardar en la transaccion
-route.vehicle				= Vehiculos
+route.vehicle				= Vehículo
 route.vehicleType			= Tipo de vehículo
 
 origin.time					= Hora de salida
