Added more error messages, #44 #45
- Added missing error messages for non-basic error operations.
- Added note explaining how to put the estimated times on route creation
  form.

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+aclaration					= NOTE: For each location the route has, you must indicate how much time (in minutes) you think it will take you to arrive from the previous one. For example: a route that goes A -> B -> C, from A to B it will take you 3 minutes, and from B to C 10 minutes, so you enter a 3 on location B and a 10 on the C one. 
 minutes						= Min.
 stop						= Stop
 route.route					= Route
@@ -71,5 +72,9 @@ route.reserv.cancelled		= You have cancelled your reservation
 route.reserv.cancel			= Cancel Reservation
 route.driver.pick.up		= The driver picked me up
 route.driver.no.pick.up		= The driver didn't pick me up
+
+route.error.seatsCapacity	 = You are exceeding the maximum capacity of the vehicle
+route.error.dateTooSoon		 = Departure datetime must be at least 15 minutes later after publication datetime 
+route.error.incorrectVehicle = You don't own this vehicle
 
 route.date.format		= {0,date,yyyy/MM/dd HH:mm}
