--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+aclaration					= NOTA: Por cada ubicación que la ruta tenga, debes indicar cuánto tiempo (en minutos) crees que te tomará llegar a ella desde la ubicación anterior. Por ejemplo: una ruta que va A -> B -> C, de A a B te tomará 3 minutos, y de B a C 10 minutos, así que introduces un 3 en la ubicación B y un 10 en la C.
 minutes						= Min.
 route.route					= Ruta
 route.stop					= Parada
@@ -69,6 +70,11 @@ route.reserv.cancelled		= Has cancelado tu reserva
 route.reserv.cancel			= Cancelar Reserva
 route.driver.pick.up		= El conductor me ha recogido
 route.driver.no.pick.up		= El conductor no me ha recogido
+
+route.error.seatsCapacity	 = Está excediendo la capacidad máxima del vehículo
+route.error.dateTooSoon		 = La fecha y hora de salida debe ser posterior en al menos 15 minutos desde el momento de la publicación 
+route.error.incorrectVehicle = Usted no es el propietario de este vehículo
+
 
 route.date.format		= {0,date,dd/MM/yyyy HH:mm}
 
