Added Credentials Management, #73

--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -17,6 +17,8 @@ driver.music			= Music
 driver.childs			= Children
 driver.username			= Email
 driver.password			= Password
+driver.repeat.password	= Repeat Password
+driver.actual.password	= Actual Password
 driver.comment			= Comments
 driver.commit.error		= This Operation Cannot be commited. 
 driver.register			= Save
@@ -28,3 +30,6 @@ creditCard.expMonth		= Expiration Month
 creditCard.expYear		= Expiration Year	
 creditCard.cvv			= CVV
 driver.bankAccountNumber= Bank Account Number
+
+driver.commit.errorPassword 	= Passwords are not the same
+driver.params.error				= Cannot commit this operation
