--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -17,6 +17,8 @@ driver.music			= Musica
 driver.childs			= Niños
 driver.username			= Email
 driver.password			= Contraseña
+driver.repeat.password	= Repetir contraseña
+driver.actual.password	= Constraseña actual
 driver.comment			= Comentarios
 driver.register			= Guardar
 driver.cancel			= Cancelar
@@ -27,3 +29,6 @@ creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
 driver.bankAccountNumber= Cuenta Bancaria
+
+driver.commit.errorPassword 	= Las contraseñas no son iguales
+driver.params.error				= Error en las entradas
