--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -10,17 +10,21 @@ passenger.name				= Name
 passenger.surname			= Surname
 passenger.country			= Country
 passenger.city				= City
-passenger.phone			= Phone
+passenger.phone				= Phone
 passenger.username			= Email
 passenger.password			= Password
+passenger.repeat.password	= Repeat Password
+passenger.actual.password	= Actual Password
 passenger.comment			= Comments
 passenger.commit.error		= This Operation Cannot be commited. 
 passenger.register			= Save
 passenger.cancel			= Cancel
-
 
 creditCard.number		= CreditCard Number	
 creditCard.expMonth		= Expiration Month
 creditCard.expYear		= Expiration Year	
 creditCard.cvv			= CVV
 passenger.bankAccountNumber= Bank Account Number
+
+passenger.commit.errorPassword 	= Passwords are not the same
+passenger.params.error		= Cannot commit this operation
