--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -10,9 +10,11 @@ passenger.name				= Nombre
 passenger.surname			= Apellidos
 passenger.country			= País
 passenger.city				= Ciudad
-passenger.phone			= Movil
+passenger.phone				= Movil
 passenger.username			= Email
 passenger.password			= Contraseña
+passenger.repeat.password	= Repetir contraseña
+passenger.actual.password	= Constraseña actual
 passenger.comment			= Comentarios
 passenger.register			= Guardar
 passenger.cancel			= Cancelar
@@ -23,3 +25,6 @@ creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
 passenger.bankAccountNumber= Cuenta Bancaria
+
+passenger.commit.errorPassword 	= Las contraseñas no son iguales
+passenger.params.error		= Error en las entradas
