--- a/src/main/webapp/views/vehicle/messages.properties
+++ b/src/main/webapp/views/vehicle/messages.properties
@@ -24,5 +24,6 @@ vehicle.cancel				= 	Cancel
 vehicle.save				=	Save
 vehicle.confirm				=	Confirm
 vehicle.delete				=	Delete
+vehicle.back				=	Back
 
 vehicle.commit.error		=	Cannot commit this operation
