--- a/src/main/webapp/views/vehicle/messages_es.properties
+++ b/src/main/webapp/views/vehicle/messages_es.properties
@@ -24,5 +24,6 @@ vehicle.cancel				= 	Cancelar
 vehicle.save				=	Guardar
 vehicle.confirm				=	Confirmar
 vehicle.delete				=	Eliminar
+vehicle.back				=	Volver
 
 vehicle.commit.error		=	Cannot commit this operation
