--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -23,6 +23,7 @@ driver.comment			= Comentarios
 driver.register			= Guardar
 driver.cancel			= Cancelar
 driver.commit.error		= Esta Operacion no se puede commitear. 
+driver.vehicles			= Vehiculos
 
 creditCard.number		= Numero Targeta de Credito
 creditCard.expMonth		= Mes de Expiracion
