[WIP]Actualizacion perfil de ruta (F) #71

--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -20,6 +20,10 @@ passenger.commit.error		= This Operation Cannot be commited.
 passenger.register			= Save
 passenger.cancel			= Cancel
 
+comment.text = Text
+comment.date = Date
+comment.star = Stars
+
 creditCard.number		= CreditCard Number	
 creditCard.expMonth		= Expiration Month
 creditCard.expYear		= Expiration Year	
