--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -23,7 +23,7 @@ driver.comment			= Comments
 driver.commit.error		= This Operation Cannot be commited. 
 driver.register			= Save
 driver.cancel			= Cancel
-driver.vehicles			= Vehicles
+driver.vehicles			= View my Vehicles
 
 
 creditCard.number		= CreditCard Number	
