Implemented new request seats, #51 #86
- Reworked the request seats form to take into account the new control
  points system.
- The price of the requests now is shown in "real-time" while you modify
  the values of the form.
- Redesigned the form to the same style than the create route form.

--- a/src/main/webapp/views/reservation/messages.properties
+++ b/src/main/webapp/views/reservation/messages.properties
@@ -18,6 +18,7 @@ reservation.cancelled			=	Cancelled
 
 reservation.passenger			= 	Passenger
 reservation.route				= 	Route
+reservation.price				= 	Price
 
 reservation.create				= 	Make a Reservation
 reservation.cancel				= 	Cancel
@@ -27,3 +28,7 @@ reservation.confirm				=	Confirm
 reservation.confirm.message		=	Do you want to confirm this reservation?
 
 reservation.commit.error		=	Cannot commit this operation
+reservation.error.wrongOrder		= Origin location must be previous to destination location
+reservation.error.tooManySeats		= There aren't that many seats available
+reservation.error.luggageNotAllowed	= You can't carry luggage on this route
+reservation.error.luggageTooBig		= Your luggage size is bigger than allowed by this route
