--- a/src/main/webapp/views/reservation/messages_es.properties
+++ b/src/main/webapp/views/reservation/messages_es.properties
@@ -18,6 +18,7 @@ reservation.cancelled			=	Cancelada
 
 reservation.passenger			= 	Pasajero
 reservation.route				= 	Ruta
+reservation.price				= 	Precio
 
 reservation.create				= 	Hacer una Reserva
 reservation.cancel				= 	Cancelar
@@ -27,3 +28,7 @@ reservation.confirm				=	Confirmar
 reservation.confirm.message		=	¿Quiere confirmar esta reserva?
 
 reservation.commit.error		=	No se puede realizar esta operacion
+reservation.error.wrongOrder		= La ubicación de origen debe ser anterior a la de destino
+reservation.error.tooManySeats		= No quedan tantos asientos disponibles
+reservation.error.luggageNotAllowed	= Esta ruta no permite llevar equipaje
+reservation.error.luggageTooBig		= El tamaño de su equipaje es superior al permitido por esta ruta
