registro passenfer front #69

--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -20,6 +20,8 @@ passenger.commit.error		= This Operation Cannot be commited.
 passenger.register			= Save
 passenger.cancel			= Cancel
 
+userAccount.password= pass
+
 comment.text = Text
 comment.date = Date
 comment.star = Stars
