--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -20,6 +20,9 @@ passenger.register			= Guardar
 passenger.cancel			= Cancelar
 passenger.commit.error		= Esta Operacion no se puede commitear. 
 
+userAccount.password= pass
+
+
 comment.text = Texto
 comment.date = Fecha
 comment.star = Puntuacion
