[WIP] need to merge development to continue

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -78,3 +78,6 @@ route.error.dateTooSoon		 = Departure datetime must be at least 15 minutes later
 route.error.incorrectVehicle = You don't own this vehicle
 
 route.date.format		= {0,date,yyyy/MM/dd HH:mm}
+
+comment.star = Score
+comment.text = Note
