--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -78,3 +78,5 @@ route.error.incorrectVehicle = Usted no es el propietario de este vehículo
 
 route.date.format		= {0,date,dd/MM/yyyy HH:mm}
 
+comment.star = Puntuación
+comment.text = Comentario
