[IMP] #55 #56 done by now

--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -81,3 +81,6 @@ route.date.format		= {0,date,yyyy/MM/dd HH:mm}
 
 comment.star = Score
 comment.text = Note
+comment.save = Send
+comment.created.ok = Comment sent
+comment.created.error = Field errors
