--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -80,3 +80,7 @@ route.date.format		= {0,date,dd/MM/yyyy HH:mm}
 
 comment.star = Puntuación
 comment.text = Comentario
+comment.save = Enviar
+
+comment.created.ok = Comentario enviado
+comment.created.error = Errores en los campos
