Vehicle list bootstrap(sin estilo)

--- a/src/main/webapp/views/vehicle/messages_es.properties
+++ b/src/main/webapp/views/vehicle/messages_es.properties
@@ -17,8 +17,8 @@ vehicle.driver				=	Conductor
 vehicle.car					=	Coche
 vehicle.bike				=	Moto
 
-vehicle.new					= 	Nuevo
-vehicle.edit				= 	Editar
+vehicle.new					= 	Nuevo vehiculo
+vehicle.edit				= 	Editar vehículo
 vehicle.edit.photo			=	Editar Foto
 vehicle.cancel				= 	Cancelar
 vehicle.save				=	Guardar
