mejorando registro driver #69

--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -24,6 +24,7 @@ driver.register			= Guardar
 driver.cancel			= Cancelar
 driver.commit.error		= Esta Operacion no se puede commitear. 
 driver.vehicles			= Ver mis vehiculos
+driver.preferences		= Preferencias
 
 creditCard.number		= Numero Targeta de Credito
 creditCard.expMonth		= Mes de Expiracion
