--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -24,11 +24,12 @@ driver.commit.error		= This Operation Cannot be commited.
 driver.register			= Save
 driver.cancel			= Cancel
 driver.vehicles			= View my Vehicles
+driver.preferences		= Preferences
 
 
 creditCard.number		= CreditCard Number	
-creditCard.expMonth		= Expiration Month
-creditCard.expYear		= Expiration Year	
+creditCard.expMonth		= ExpirationMonth
+creditCard.expYear		= ExpirationYear	
 creditCard.cvv			= CVV
 driver.bankAccountNumber= Bank Account Number
 
