--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -23,3 +23,8 @@ master.page.profile.action.3		= Acción 3
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+
+master.page.myProfile				= Mi Perfil
+master.page.myVehicles				= Mis Vehículos
+master.page.editProfile				= Editar Perfil
+master.page.editCredentials			= Editar Credenciales
