--- a/src/main/webapp/views/reservation/messages.properties
+++ b/src/main/webapp/views/reservation/messages.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+makeReservation					= Request Seats
 reservation.luggage				= 	Luggage Size
 reservation.price				= 	Price
 reservation.origin				= 	Origin
