--- a/src/main/webapp/views/reservation/messages_es.properties
+++ b/src/main/webapp/views/reservation/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+makeReservation					= Solicitar Plazas
 reservation.luggage				= 	Tamaño de Equipaje
 reservation.price				= 	Precio
 reservation.origin				= 	Origen
