--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -6,6 +6,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+createRoute					= Crear Ruta
+confirmRoute				= Confirmar Ruta
+confirmRouteMessage			= ¿Desea publicar esta ruta?
+searchRoute					= Buscar Rutas
+searchResults				= Resultados de Búsqueda
 aclaration					= NOTA: Por cada ubicación que la ruta tenga, debes indicar cuánto tiempo (en minutos) crees que te tomará llegar a ella desde la ubicación anterior. Por ejemplo: una ruta que va A -> B -> C, de A a B te tomará 3 minutos, y de B a C 10 minutos, así que introduces un 3 en la ubicación B y un 10 en la C.
 minutes						= Min.
 route.route					= Ruta
