Added language selection on footer, #66
- Added selection of language between spanish and english on the footer of
  the website.
- Changed the avaiable seats texts on route lists for rectangle icons.
- TO-DO: There are still missing texts in spanish.

--- a/src/main/webapp/views/master-page/messages.properties
+++ b/src/main/webapp/views/master-page/messages.properties
@@ -28,3 +28,6 @@ master.page.myProfile				= My Profile
 master.page.myVehicles				= My Vehicles
 master.page.editProfile				= Edit Profile
 master.page.editCredentials			= Edit Credentials
+
+english		= English
+spanish		= Spanish
