--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -28,3 +28,6 @@ master.page.myProfile				= Mi Perfil
 master.page.myVehicles				= Mis Vehículos
 master.page.editProfile				= Editar Perfil
 master.page.editCredentials			= Editar Credenciales
+
+english		= Inglés
+spanish		= Español
