--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -6,6 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+activeRoutes				= Rutas Activas
 createRoute					= Crear Ruta
 confirmRoute				= Confirmar Ruta
 confirmRouteMessage			= ¿Desea publicar esta ruta?
