Estilo Profile Management #76

--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -6,6 +6,14 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+driver.title.principal	= Edit Profile Driver
+
+driver.nav.profile		= Profile
+driver.nav.vehicles		= Vehicles
+driver.nav.payment		= Payment
+driver.nav.credentials	= Credentials
+
+
 driver.name				= Name
 driver.surname			= Surname
 driver.country			= Country
