--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -6,6 +6,14 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+driver.title.principal	= Editar Perfil de Conductor
+
+driver.nav.profile		= Perfil
+driver.nav.vehicles		= Vehículos
+driver.nav.payment		= Pago
+driver.nav.credentials	= Credenciales
+
+
 driver.name				= Nombre
 driver.surname			= Apellidos
 driver.country			= País
