--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -6,6 +6,8 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+passenger.title.principal	= Edit Profile Passenger
+
 passenger.name				= Name
 passenger.surname			= Surname
 passenger.country			= Country
