--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -6,6 +6,8 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+passenger.title.principal	= Editar Perfil Pasajero
+
 passenger.name				= Nombre
 passenger.surname			= Apellidos
 passenger.country			= País
