Credenciales #74  Modificación vehícle #80 #79

--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-driver.title.principal	= Edit Profile Driver
+driver.title.principal	= Configuration
 
 driver.nav.profile		= Profile
 driver.nav.vehicles		= Vehicles
