--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-driver.title.principal	= Editar Perfil de Conductor
+driver.title.principal	= Configuración
 
 driver.nav.profile		= Perfil
 driver.nav.vehicles		= Vehículos
