--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-passenger.title.principal	= Editar Perfil Pasajero
+passenger.title.principal	= Configuración
 
 passenger.name				= Nombre
 passenger.surname			= Apellidos
