--- a/src/main/webapp/views/vehicle/messages.properties
+++ b/src/main/webapp/views/vehicle/messages.properties
@@ -6,6 +6,9 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+vehicle.title.principal		= Edit your vehicle
+
+
 vehicle.model				= 	Model
 vehicle.brand				= 	Brand
 vehicle.image				= 	Image
