--- a/src/main/webapp/views/vehicle/messages_es.properties
+++ b/src/main/webapp/views/vehicle/messages_es.properties
@@ -6,6 +6,10 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
+vehicle.title.principal		= Edita tu vehículo
+
+
 vehicle.model				= 	Modelo
 vehicle.brand				= 	Marca
 vehicle.image				= 	Imagen
