--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -6,7 +6,7 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-passenger.title.principal	= Edit Profile Passenger
+passenger.title.principal	= Configuration
 
 passenger.name				= Name
 passenger.surname			= Surname
