Confirmation messages added

--- a/src/main/webapp/views/reservation/messages.properties
+++ b/src/main/webapp/views/reservation/messages.properties
@@ -16,6 +16,7 @@ reservation.status				= 	Status
 reservation.pending				=	Pending
 reservation.accepted			=	Accepted
 reservation.cancelled			=	Cancelled
+reserv.save.confirm				= 	Your money will not be refounded
 
 reservation.passenger			= 	Passenger
 reservation.route				= 	Route
