--- a/src/main/webapp/views/reservation/messages_es.properties
+++ b/src/main/webapp/views/reservation/messages_es.properties
@@ -16,6 +16,7 @@ reservation.status				= 	Estado
 reservation.pending				=	Pendiente
 reservation.accepted			=	Aceptada
 reservation.cancelled			=	Cancelada
+reserv.save.confirm				= 	Tu dinero no será reembolsado
 
 reservation.passenger			= 	Pasajero
 reservation.route				= 	Ruta
