--- a/src/main/webapp/views/route/messages.properties
+++ b/src/main/webapp/views/route/messages.properties
@@ -55,6 +55,7 @@ route.seats					= Seats
 route.price.per.passenger	= Price per Passenger
 route.luggage				= Luggage
 route.commit.error			= Cannot commit operation
+reserv.cancel.confirm		= Are you sure you want to cancel your reservation? your money will not be refounded
 
 route.request.seats			= Request Seats
 route.total					= Total
