--- a/src/main/webapp/views/route/messages_es.properties
+++ b/src/main/webapp/views/route/messages_es.properties
@@ -38,6 +38,7 @@ route.cancel				= Cancelar
 route.commit.error			= Error al guardar en la transaccion
 route.vehicle				= Vehículo
 route.vehicleType			= Tipo de vehículo
+reserv.cancel.confirm		= ¿Seguro que quieres cancelar la reserva? Tu dinero no será reembolsado
 
 origin.time					= Hora de salida
 destination.time			= Hora de llegada
