--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -12,6 +12,7 @@ driver.nav.profile		= Profile
 driver.nav.vehicles		= Vehicles
 driver.nav.payment		= Payment
 driver.nav.credentials	= Credentials
+driver.create 			= New driver
 
 
 driver.name				= Name
