--- a/src/main/webapp/views/passenger/messages.properties
+++ b/src/main/webapp/views/passenger/messages.properties
@@ -21,6 +21,7 @@ passenger.comment			= Comments
 passenger.commit.error		= This Operation Cannot be commited. 
 passenger.register			= Save
 passenger.cancel			= Cancel
+passengerCreate = New passenger
 
 userAccount.password= pass
 
