--- a/src/main/webapp/views/passenger/messages_es.properties
+++ b/src/main/webapp/views/passenger/messages_es.properties
@@ -20,7 +20,8 @@ passenger.actual.password	= Constraseña actual
 passenger.comment			= Comentarios
 passenger.register			= Guardar
 passenger.cancel			= Cancelar
-passenger.commit.error		= Esta Operacion no se puede commitear. 
+passenger.commit.error		= Esta Operacion no se puede commitear.
+passengerCreate = Nuevo pasajero
 
 userAccount.password= pass
 
@@ -30,7 +31,7 @@ comment.date = Fecha
 comment.star = Puntuacion
 
 
-creditCard.number		= Numero Targeta de Credito
+creditCard.number		= Número Tarjeta de Crédito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
