--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -33,8 +33,9 @@ driver.cancel			= Cancelar
 driver.commit.error		= Esta Operacion no se puede commitear. 
 driver.vehicles			= Ver mis vehiculos
 driver.preferences		= Preferencias
+driver.create 			= Nuevo conductor
 
-creditCard.number		= Numero Targeta de Credito
+creditCard.number		= Número Tarjeta de Credito
 creditCard.expMonth		= Mes de Expiracion
 creditCard.expYear		= Año de Expiracion	
 creditCard.cvv			= CVV
