--- a/src/main/webapp/views/driver/messages_es.properties
+++ b/src/main/webapp/views/driver/messages_es.properties
@@ -43,3 +43,4 @@ driver.bankAccountNumber= Cuenta Bancaria
 
 driver.commit.errorPassword 	= Las contraseñas no son iguales
 driver.params.error				= Error en las entradas
+displayDriver						= Perfil de conductor
