--- a/src/main/webapp/views/driver/messages.properties
+++ b/src/main/webapp/views/driver/messages.properties
@@ -44,3 +44,4 @@ driver.bankAccountNumber= Bank Account Number
 
 driver.commit.errorPassword 	= Passwords are not the same
 driver.params.error				= Cannot commit this operation
+displayDriver					= Driver display
