Arreglos varios front

--- a/src/main/webapp/views/master-page/messages_es.properties
+++ b/src/main/webapp/views/master-page/messages_es.properties
@@ -6,6 +6,11 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
+
+master.page.addRoute				= Añadir ruta
+master.page.searchRoute				= Buscar ruta
+
+
 master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
